// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser: Should alter table adding unique index with index option, two columns and option. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addUniqueKey",
                    "name": null,
                    "index": {
                      "id": "P_INDEX_TYPE",
                      "def": "hash"
                    },
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id",
                          "length": 2,
                          "sort": "asc"
                        }
                      },
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "o_id"
                        }
                      }
                    ],
                    "options": [
                      {
                        "id": "O_INDEX_OPTION",
                        "def": {
                          "comment": "test"
                        }
                      }
                    ]
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unique index with index option, two columns and option. 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addUniqueKey",
                    "name": null,
                    "index": {
                      "id": "P_INDEX_TYPE",
                      "def": "hash"
                    },
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id",
                          "length": 2,
                          "sort": "asc"
                        }
                      },
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "o_id"
                        }
                      }
                    ],
                    "options": [
                      {
                        "id": "O_INDEX_OPTION",
                        "def": {
                          "comment": "test"
                        }
                      }
                    ]
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unique index with index option, two columns and options. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addUniqueKey",
                    "name": "xyz",
                    "index": {
                      "id": "P_INDEX_TYPE",
                      "def": "hash"
                    },
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id",
                          "length": 2,
                          "sort": "asc"
                        }
                      },
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "o_id"
                        }
                      }
                    ],
                    "options": [
                      {
                        "id": "O_INDEX_OPTION",
                        "def": {
                          "keyBlockSize": 1024
                        }
                      },
                      {
                        "id": "O_INDEX_OPTION",
                        "def": {
                          "comment": "test"
                        }
                      }
                    ]
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unique index with one column and option. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addUniqueKey",
                    "name": null,
                    "index": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id"
                        }
                      }
                    ],
                    "options": [
                      {
                        "id": "O_INDEX_OPTION",
                        "def": {
                          "keyBlockSize": 1024
                        }
                      }
                    ]
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unique index with one column. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addUniqueKey",
                    "name": null,
                    "index": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id"
                        }
                      }
                    ],
                    "options": []
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unique index with one column. 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addUniqueKey",
                    "name": null,
                    "index": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id"
                        }
                      }
                    ],
                    "options": []
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unique key with index option, two columns and option. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addUniqueKey",
                    "name": null,
                    "index": {
                      "id": "P_INDEX_TYPE",
                      "def": "hash"
                    },
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id",
                          "length": 2,
                          "sort": "asc"
                        }
                      },
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "o_id"
                        }
                      }
                    ],
                    "options": [
                      {
                        "id": "O_INDEX_OPTION",
                        "def": {
                          "comment": "test"
                        }
                      }
                    ]
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unique key with index option, two columns and option. 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addUniqueKey",
                    "name": null,
                    "index": {
                      "id": "P_INDEX_TYPE",
                      "def": "hash"
                    },
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id",
                          "length": 2,
                          "sort": "asc"
                        }
                      },
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "o_id"
                        }
                      }
                    ],
                    "options": [
                      {
                        "id": "O_INDEX_OPTION",
                        "def": {
                          "comment": "test"
                        }
                      }
                    ]
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unique key with index option, two columns and options. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addUniqueKey",
                    "name": "xyz",
                    "index": {
                      "id": "P_INDEX_TYPE",
                      "def": "hash"
                    },
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id",
                          "length": 2,
                          "sort": "asc"
                        }
                      },
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "o_id"
                        }
                      }
                    ],
                    "options": [
                      {
                        "id": "O_INDEX_OPTION",
                        "def": {
                          "keyBlockSize": 1024
                        }
                      },
                      {
                        "id": "O_INDEX_OPTION",
                        "def": {
                          "comment": "test"
                        }
                      }
                    ]
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unique key with one column and option. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addUniqueKey",
                    "name": null,
                    "index": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id"
                        }
                      }
                    ],
                    "options": [
                      {
                        "id": "O_INDEX_OPTION",
                        "def": {
                          "keyBlockSize": 1024
                        }
                      }
                    ]
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unique key with one column. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addUniqueKey",
                    "name": null,
                    "index": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id"
                        }
                      }
                    ],
                    "options": []
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unique key with one column. 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addUniqueKey",
                    "name": null,
                    "index": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id"
                        }
                      }
                    ],
                    "options": []
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unnamed unique index with one column. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addUniqueKey",
                    "name": null,
                    "index": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id"
                        }
                      }
                    ],
                    "options": []
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unnamed unique index with one column. 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addUniqueKey",
                    "name": null,
                    "index": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id"
                        }
                      }
                    ],
                    "options": []
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unnamed unique key with one column. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addUniqueKey",
                    "name": null,
                    "index": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id"
                        }
                      }
                    ],
                    "options": []
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unnamed unique key with one column. 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addUniqueKey",
                    "name": null,
                    "index": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id"
                        }
                      }
                    ],
                    "options": []
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;
